알고리즘 조금 수정

--- a/220624segment/index.html
+++ b/220624segment/index.html
@@ -16,6 +16,7 @@
     <script src="./index.js" defer type="module"></script>
 </head>
 <body>
+    <div id="res"></div>
     <canvas width="800" height="600"></canvas>
 </body>
 </html>
